k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-pfa
  labels:
    app: wallet-pfa
spec:
  type: NodePort
  selector:
    app: wallet-pfa
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30800   # accès via http://<minikube-ip>:30800
      protocol: TCP
